# Sprints_Capstone_Project

./: CMakeLists.txt  README.md  Requirements.md
boost_logger_lib/: CMakeLists.txt  logger.cpp  logger.hpp
damond_service_file/: daemon_logger.service
etc/: MQ_config.txt
host_app/: CMakeLists.txt  host_app.cpp  host_app.hpp
inc/: severity_helper.hpp
logger_daemon_app/: CMakeLists.txt  config_file_handler.cpp  config_file_handler.hpp  container_class.cpp  container_class.hpp  lg_daemon.hpp  lg_daemon_app.cpp  server_class.cpp  server_class.hpp  threads_handler.cpp  threads_handler.hpp
math_app/: CMakeLists.txt  math_app.cpp  math_class.cpp  math_class.hpp
message_queue_lib/: CMakeLists.txt  mq_posix_wraper.cpp  mq_posix_wraper.hpp
